# bayesian_lora

./: .gitignore  CITATION.cff  Makefile  README.md  bayesian_lora.py  docs  example_usage.py  pyproject.toml  setup.py
bayesian_lora/: __init__.py  kfac.py  main.py
docs/: bayesian_lora.html  example_usage.html  genindex.html  kfac.html  objects.inv  py-modindex.html  searchindex.js
docs/.doctrees/: bayesian_lora.doctree  environment.pickle  example_usage.doctree  index.doctree
docs/_sources/: bayesian_lora.rst.txt  example_usage.rst.txt  index.rst.txt  kfac.rst.txt
docs/html/: index.html  kfac.html
docs/html/.doctrees/: bayesian_lora.doctree  environment.pickle  index.doctree
docs/source/: conf.py
documentation/: writedocs.sh
documentation/source/: bayesian_lora.rst  example_usage.rst  index.rst
example_configs/: base_config.yaml  example_usage.yaml
example_configs/dset/: arc.yaml  cola.yaml  cqa.yaml  mrpc.yaml  sste.yaml
example_configs/llm/: gpt2.yaml  phi.yaml
example_configs/llm/quantization/: 4bit.yaml  8bit.yaml  none.yaml
example_configs/opt/: adam.yaml  adamw.yaml
example_utils/: loggers.py  setup_llm.py
examples/: example_usage.py
examples/configs/: example_usage.yaml
examples/configs/accelerate/: fsdp.yaml  local_with_ds.yaml  simple.yaml
examples/configs/dset/: arc.yaml  boolq.yaml  cola.yaml  cqa.yaml  mnli.yaml  mrpc.yaml  obqa.yaml  qnli.yaml  qqp.yaml  rte.yaml  sst2.yaml  winogrande.yaml  wnli.yaml
examples/configs/hydra/: default.yaml  dev.yaml
examples/configs/llm/: llama2.yaml  phi.yaml  roberta.yaml  zephyr.yaml
examples/configs/llm/peft/: adalora.yaml  high_r_lora.yaml  lora.yaml
examples/configs/paths/: default.yaml
examples/utils/: dsets.py  setup_llm.py
notebooks/: roberta_dev.py  test_notebook.py
tests/: conftest.py  test_example.py  test_kfac.py
